k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketman
  namespace: pocketman
  labels:
    app: pocketman
spec:
  type: ClusterIP
  selector:
    app: pocketman
  ports:
    - port: 80
      targetPort: 3000
